--- a/.config/.pug-lintrc.json
+++ b/.config/.pug-lintrc.json
@@ -13,7 +13,7 @@
   "disallowDuplicateAttributes": true,
   "disallowHtmlText": null,
   "disallowIdAttributeWithStaticValue": null,
-  "disallowIdLiterals": true,
+  "disallowIdLiterals": null,
   "disallowIdLiteralsBeforeAttributes": null,
   "disallowMultipleLineBreaks": true,
   "disallowSpaceAfterCodeOperator": null,
